--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.egci428.ex_listactivity1.MainActivity">
+    tools:context="com.egci428.ex_listview.MainActivity">
 
-    <TextView
-        android:id="@android:id/text1"
-        style="?android:attr/listViewStyle"
-        android:paddingTop="2dip"
-        android:paddingBottom="3dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_listView">
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
