--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,12 +35,13 @@
             android:textSize="36sp"
             android:textStyle="bold" />
 
-        <TextView android:text="text" android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/courseListView"
-            android:layout_marginTop="31dp"
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/list"
             android:layout_below="@+id/imageView"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp" />
 
     </RelativeLayout>
 
