--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,43 +6,45 @@
     android:layout_height="match_parent"
     tools:context="com.egci428.ex_listactivitymodel.MainActivity">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:maxHeight="50dp"
+        android:maxWidth="50dp"
+        android:minHeight="20dp"
+        android:minWidth="20dp"
+        android:nestedScrollingEnabled="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/egco" />
+
+    <TextView
+        android:id="@+id/outputText"
+        android:layout_width="273dp"
+        android:layout_height="83dp"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:gravity="center"
+        android:text="Course Catelog"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <ListView
+        android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:id="@+id/imageView"
-            android:minHeight="20dp"
-            android:minWidth="20dp"
-            android:nestedScrollingEnabled="true"
-            android:src="@drawable/egco"
-            android:scaleType="fitCenter"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:maxWidth="50dp"
-            android:maxHeight="50dp" />
-
-        <TextView
-            android:id="@+id/outputText"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView"
-            android:layout_marginLeft="20dp"
-            android:layout_toEndOf="@+id/imageView"
-            android:text="Course Catelog"
-            android:textSize="36sp"
-            android:textStyle="bold" />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/list"
-            android:layout_below="@+id/imageView"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp" />
-
-    </RelativeLayout>
+        android:layout_height="408dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="6dp"
+        app:layout_constraintTop_toBottomOf="@+id/outputText"
+        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
